--- a/HTMLPage/index.html
+++ b/HTMLPage/index.html
@@ -13,7 +13,7 @@
   <form>
     <label for="coasterName">Coaster Name:</label><br>
     <input type="text" id="coasterName" name="coasterName"><br>
-    <input type="button" onclick="searchCoasters();"value="Search">
+    <input type="button" onclick="renderSearch();"value="Search">
   </form>
   <div class="container"></div>
 
